<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="at.bwappsandmore.doitagain.ui.InsertNewDataFragment" />

        <variable
            name="viewModel"
            type="at.bwappsandmore.doitagain.viewModel.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/insertEngagementCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.InsertNewDataFragment">

        <TextView
            android:id="@+id/promptActivitytV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/EnterEngagement"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/promptActivityEt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lastTimeDoneTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastTimeDone"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/calendarView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promptActivityEt" />

        <EditText
            android:id="@+id/promptActivityEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:gravity="center_horizontal"
            android:hint="@string/ExampleEngagement"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/lastTimeDoneTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promptActivitytV" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:firstDayOfWeek="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastTimeDoneTv"
            app:layout_constraintVertical_bias="0.997" />

        <ImageButton
            android:id="@+id/backIb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_24px"
            android:contentDescription="@string/goBack"
            app:layout_constraintBottom_toBottomOf="@+id/promptActivitytV"
            app:layout_constraintStart_toStartOf="@+id/calendarView"
            app:srcCompat="@drawable/back_24px" />

        <ImageButton
            android:id="@+id/okIb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/done_24px"
            android:contentDescription="@string/ok"
            android:onClick="@{() -> fragment.onClickAction()}"
            app:layout_constraintBottom_toBottomOf="@+id/promptActivitytV"
            app:layout_constraintEnd_toEndOf="@+id/calendarView"
            app:srcCompat="@drawable/done_24px" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
