<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/insertEngagementCL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.InsertNewEngagementFragment">

    <TextView
        android:id="@+id/promptActivitytV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/EnterEngagement"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastTimeDoneTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lastTimeDone"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promptActivityEt" />

    <EditText
        android:id="@+id/promptActivityEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="8"
        android:textSize="32sp"
        android:hint="@string/ExampleEngagement"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promptActivitytV"
        android:importantForAutofill="no" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:firstDayOfWeek="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997" />

    <ImageButton
        android:id="@+id/backIb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_24px"
        android:contentDescription="@string/goBack"
        android:src="@drawable/back_24px"
        app:layout_constraintBottom_toBottomOf="@+id/promptActivitytV"
        app:layout_constraintStart_toStartOf="@+id/calendarView" />

    <ImageButton
        android:id="@+id/okIb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/done_24px"
        android:src="@drawable/done_24px"
        android:contentDescription="@string/goBack"
        app:layout_constraintBottom_toBottomOf="@+id/promptActivitytV"
        app:layout_constraintEnd_toEndOf="@+id/calendarView" />

</androidx.constraintlayout.widget.ConstraintLayout>
